tests/ui/nll/user-annotations/type_ascription_static_lifetime.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/type_ascription_static_lifetime.rs:6:33
   |
LL |     let x = 22_u32;
   |         - binding `x` declared here
LL |     let y: &u32 = type_ascribe!(&x, &'static u32);
   |                                 ^^  ------------ type annotation requires that `x` is borrowed for `'static`
   |                                 |
   |                                 borrowed value does not live long enough
LL | }
   | - `x` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
